[package]
name = "dungeon_crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "~0.8.1" }
legion = "=0.3.1"
glow = { version = "0.10.0", optional = true }
image = { version = "0.23.12", default-features = false, features = ["jpeg", "png"], optional = true }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.26.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3", features=["console", "Attr", "CanvasRenderingContext2d", "Document", "Element", "Event",
    "EventTarget", "HtmlCanvasElement", "HtmlElement", "HtmlInputElement", "Node", "Text", "Window", "KeyboardEvent",
    "MouseEvent"] }
wasm-bindgen = "0.2"
wasm-timer = "0.1.0"
rand = { version = "0.8.3", default-features = false  }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
winit = { version = "0.24.0", features = [ "web-sys" ] }

[features]
default = [ "opengl" ]
opengl = [ "glow", "image", "glutin" ]